--- a/elibrary-controller/src/main/resources/templates/subscriptions/subscriptionInfo.html
+++ b/elibrary-controller/src/main/resources/templates/subscriptions/subscriptionInfo.html
@@ -69,16 +69,13 @@
                     <td class="p-1" th:text="${subscription.took}"></td>
                     <td class="p-1">
                         <p th:text="${subscription.status}"></p>
-                        <div th:if="${subscriptin.getStatus().equalsIgnoreCase('booking')}"
-                             th:replace="fragments/undoBookingModal :: undoBookingBookModal(thisBook=${bookDetails})"></div>
-                    </td>
+                        <div th:replace="fragments/undoBookingModal :: undoBookingBookModal(thisSubscription=${subscription})"></div>
                     <td class="p-1" th:text="${subscription.returned}"></td>
                     <td class="p-1" th:text="${subscription.created}"></td>
                     <td class="p-1" th:text="${subscription.deadline}"></td>
                 </tr>
                 </tbody>
             </table>
-
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:class="'page-item ' + ${pageSubscriptionDto.getNumber() > 0 ? '' : 'disabled'}">
