Add working 'create book'.

--- a/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminBooksList.html
@@ -33,6 +33,7 @@
         <div class="bd-intro ps-lg-4">
             <h1>Books</h1>
             <p class="lead">Table of books in the database</p>
+            <div th:replace="fragments/getAddBookFormModal :: getAddBookForm"></div>
         </div>
         <div class="bd-content ps-lg-4">
             <table class="table">
