--- a/elibrary-controller/src/main/resources/templates/fragments/undoBookingModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/undoBookingModal.html
@@ -26,7 +26,9 @@
                 </div>
                 <div class="modal-body">
                     <h5 class="modal-title" th:text="${thisSubscription.bookDetails.title}"></h5>
-                    <form class="row container-sm" action="#" th:action="@{/subscriptions/undo}" method="post">
+                    <form class="row container-sm" action="#"
+                          th:id="'unodBookingFormId' + ${thisSubscription.id}"
+                          th:action="@{/subscriptions/undo}" method="post">
                         <div class="input-group mt-3 mb-3">
                             <label for="count" class="input-group-text">Count</label>
                             <input type="number" id="count" name="count" class="form-control"
@@ -35,12 +37,13 @@
                             <input type="text" id="subscriptionId" name="id" class="form-control visually-hidden"
                                    th:value="${thisSubscription.id}"
                                    placeholder="Book Id" required autofocus>
-                            <button class="btn btn-outline-primary" type="submit">Undo</button>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-primary" type="submit"
+                            th:form="'unodBookingFormId' + ${thisSubscription.id}">Undo booking</button>
                 </div>
             </div>
         </div>
