--- a/elibrary-controller/src/main/resources/templates/fragments/bookingBookModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/bookingBookModal.html
@@ -27,27 +27,27 @@
                     </div>
                     <div class="modal-body">
                         <h5 class="modal-title" th:text="${thisBook.title}"></h5>
-                        <h6 class="modal-title" th:text="'Available count: ' + ${thisBook.availableCount} + '. '"></h6>
-                        <form class="row g-3 mt-1" action="#" th:action="@{/subscriptions}" method="post">
-                            <div class="col-auto">
-                                <label for="bookId" class="form-label visually-hidden">Book Id</label>
-                                <input type="text" id="bookId" name="bookId" class="form-control visually-hidden"
+                        <p class="modal-title text-muted" th:text="'Available count: ' + ${thisBook.availableCount}"></p>
+                        <form class="row justify-content-md-center m-0 mt-2" action="#"
+                              th:id="'bookingBookFormId' + ${thisBook.id}"
+                              th:action="@{/subscriptions}" method="post">
+                            <div class="visually-hidden">
+                                <label for="bookId" class="form-label">Book Id</label>
+                                <input type="text" id="bookId" name="bookId" class="form-control"
                                        th:value="${thisBook.id}"
                                        placeholder="Book Id" required autofocus>
                             </div>
-                            <div class="col-auto">
-                                <label for="count" class="form-label visually-hidden">Count</label>
+                            <div class="col col-3 input-group">
+                                <label for="count" class="input-group-text">Count</label>
                                 <input type="number" id="count" name="count" class="form-control"
-                                       th:value="1"
-                                       placeholder="Count" required autofocus>
-                            </div>
-                            <div class="col-auto">
-                                <button class="btn btn-primary" type="submit">Booking</button>
+                                       th:value="1" placeholder="Count" required autofocus>
                             </div>
                         </form>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" type="submit"
+                                th:form="'bookingBookFormId' + ${thisBook.id}">Booking</button>
                     </div>
                 </div>
             </div>
