--- a/elibrary-controller/src/main/resources/templates/fragments/subNavbarSubscriptionUser.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/subNavbarSubscriptionUser.html
@@ -8,6 +8,13 @@
 <aside th:fragment="navAsideSubcriptionStatus(currentStatusCode)" class="bd-sidebar">
     <nav id="bd-docs-nav" aria-label="Docs navigation">
         <div th:replace="::statusList(statusCode=${currentStatusCode})"></div>
+
+        <form class="input-group mt-3" action="#" th:action="@{subscriptions}" th:method="get">
+            <input type="text" name="subscriptionId" class="form-control"
+                   placeholder="Subscription ID" aria-label="User library card number"
+                   aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Find</button>
+        </form>
     </nav>
 </aside>
 
