Add OAuth2 with GitHub and Facebook, but it don't work with Google. There is one problem in OAuth2LoginAuthenticationFilter line 161, not handshake (working in postman request). Add BookScraper interface.

--- a/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminSubscriptionList.html
@@ -35,7 +35,7 @@
             <h1>Subscriptions</h1>
         </div>
         <div class="bd-content ps-lg-4">
-            <form class="input-group mb-3" action="#" th:action="@{/admin/subscriptions/create}" method="post">
+            <form class="input-group mb-3" action="#" th:action="@{/admin/subscriptions}" method="post">
                 <div class="input-group mb-3">
                     <label for="userId" class="input-group-text">User Id</label>
                     <input type="number" id="userId" name="userId" class="form-control" placeholder="ID" required autofocus>
