--- a/elibrary-controller/src/main/resources/templates/admin/adminCategoriesList.html
+++ b/elibrary-controller/src/main/resources/templates/admin/adminCategoriesList.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -28,11 +29,54 @@
 <div class="container-xxl my-md-4 bd-layout">
     <main class="bd-main order-1">
         <div class="bd-intro ps-lg-4">
-            <h1>Books</h1>
-            <p class="lead">Table of books in the database</p>
+            <h1>Categories</h1>
+            <p class="lead">Category tree</p>
         </div>
         <div class="bd-content ps-lg-4">
             <!-- There rending tree of categories with edit elements -->
+            <ul class="list-unstyled m-1 py-3 pt-md-1">
+                <!--/*@thymesVar id="categoryDtoSet" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
+                <div th:replace="fragments/addParentCategoryModal :: addParentCategoryModal"></div>
+                <div th:replace="::categoryTree (categorySet=${categoryDtoSet})"></div>
+            </ul>
+
+            <!--/*@thymesVar id="categorySet" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
+            <div th:fragment="categoryTree (categorySet)">
+                <div th:if="${categorySet != null && !categorySet.isEmpty()}"
+                     th:each="category : ${categorySet}" th:id="'accordionCategory' + *{category.id}"
+                     th:class="${category.categories != null && !category.categories.isEmpty() ? 'accordion mt-2' : ''}">
+                    <!--/*@thymesVar id="categories" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
+                    <div th:if="${category.categories != null && !category.categories.isEmpty()}" class="accordion-item">
+                        <div class="accordion-header border rounded-2" th:id="'heading' + *{category.id}">
+                            <div class="ps-3 pb-1">
+                                <div th:replace="fragments/renameCategoryModal :: renameCategoryModal(category=${category})"></div>
+                                <div th:replace="fragments/deleteCategoryModal :: deleteCategoryModal(category=${category})"></div>
+                                <div th:replace="fragments/addCategoryModal :: addCategoryModal(parentCategory=${category})"></div>
+                            </div>
+                            <button class="accordion-button collapsed border-0 pt-1 pb-1" type="button" data-bs-toggle="collapse"
+                                    th:attr="data-bs-target='#collapse' + *{category.id}, aria-controls='collapse' + *{category.id}"
+                                    aria-expanded="false"
+                                    th:text="${category.categoryName}">
+                            </button>
+                        </div>
+                        <div th:id="'collapse' + *{category.id}"
+                             class="accordion-collapse collapse"
+                             th:attr="aria-labelledby='heading' + *{category.id}, data-bs-parent='#accordionCategory' + *{category.id}">
+                            <div class="accordion-body p-3">
+                                <div th:replace="::categoryTree (categorySet=${category.categories})"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div th:if="${category.categories == null || category.categories.isEmpty()}" class="row border-bottom p-1">
+                        <div class="col col-8 pt-1" th:text="${category.categoryName}"></div>
+                        <div class="col text-end">
+                            <div th:replace="fragments/renameCategoryModal :: renameCategoryModal(category=${category})"></div>
+                            <div th:replace="fragments/deleteCategoryModal :: deleteCategoryModal(category=${category})"></div>
+                            <div th:replace="fragments/addCategoryModal :: addCategoryModal(parentCategory=${category})"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </div>
