--- a/elibrary-controller/src/main/resources/templates/fragments/getAddBookFormModal.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/getAddBookFormModal.html
@@ -21,20 +21,31 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h5 class="modal-title">Write count of authors for the book</h5>
                     <form class="input-group m-0 row justify-content-md-center" id="countAuthorsForm" action="#"
                           th:action="@{/admin/books/add}" th:method="get">
-                        <div class="col-sm-3">
-                            <label class="text-center" for="countAuthors">Count of authors</label>
+                        <h6>Fill in the data of the book yourself.</h6>
+                        <div class="col-sm-5 input-group">
+                            <label class="input-group-text" for="countAuthors">Count of authors</label>
                             <input type="number" name="countAuthors" class="form-control"
                                    placeholder="Count of authors" aria-label="Count of authors"
                                    value="5" id="countAuthors">
+                        </div>
+                    </form>
+                    <form class="input-group mt-4 m-0 row justify-content-md-center" id="isbnFormId" action="#"
+                          th:action="@{/admin/books/add}" th:method="get">
+                        <h6>Find book data by ISBN</h6>
+                        <div class="col-sm-5 input-group">
+                            <label class="input-group-text" for="isbnInput">ISBN</label>
+                            <input type="text" name="isbn" class="form-control"
+                                   placeholder="ISBN-10 or ISBN-13" aria-label="ISBN"
+                                   id="isbnInput">
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                     <button type="submit" class="btn btn-primary" form="countAuthorsForm">Add book</button>
+                    <button type="submit" class="btn btn-primary" form="isbnFormId">By ISBN</button>
                 </div>
             </div>
         </div>
