--- a/elibrary-controller/src/main/resources/templates/error.html
+++ b/elibrary-controller/src/main/resources/templates/error.html
@@ -40,32 +40,32 @@
     <table class="table">
         <tr>
             <td>Date</td>
-            <td th:text="${timestamp}"/>
+            <td th:text="${param.timestamp}"></td>
         </tr>
         <tr>
             <td>Path</td>
-            <td th:text="${path}"/>
+            <td th:text="${param.rpath}"></td>
         </tr>
         <tr>
             <td>Error</td>
-            <td th:text="${error}"/>
+            <td th:text="${param.error}"></td>
         </tr>
         <tr>
             <td>Status</td>
-            <td th:text="${status}"/>
+            <td th:text="${param.status}"></td>
         </tr>
         <tr>
             <td>Message</td>
-            <td th:text="${message}"/>
+            <td th:text="${param.message}"></td>
         </tr>
         <tr>
             <td>Exception</td>
-            <td th:text="${exception}"/>
+            <td th:text="${param.exception}"></td>
         </tr>
         <tr>
             <td>Trace</td>
             <td>
-                <pre th:text="${trace}"/>
+                <pre th:text="${param.trace}"></pre>
             </td>
         </tr>
     </table>
