--- a/elibrary-controller/src/main/resources/templates/fragments/subNavbarCategory.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/subNavbarCategory.html
@@ -83,33 +83,33 @@
 </ul>
 
 <!--/*@thymesVar id="categorySet" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
-<div th:fragment="accordion-menu (categorySet)">
-    <div th:if="${categorySet != null && !categorySet.isEmpty()}"
-         th:each="category : ${categorySet}" th:id="'accordionCategory' + *{category.id}"
-         th:class="${category.categories != null && !category.categories.isEmpty() ? 'accordion' : 'p-1 border-bottom'}">
-        <!--/*@thymesVar id="categories" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
-        <div th:if="${category.categories != null && !category.categories.isEmpty()}"
-             class="accordion-item">
-            <h2 class="accordion-header" th:id="'heading' + *{category.id}">
-                <button class="p-1 accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        th:attr="data-bs-target='#collapse' + *{category.id}, aria-controls='collapse' + *{category.id}"
-                        aria-expanded="false"
-                        th:text="${category.categoryName}">
-                </button>
-            </h2>
-            <div th:id="'collapse' + *{category.id}"
-                 class="accordion-collapse collapse"
-                 th:attr="aria-labelledby='heading' + *{category.id}, data-bs-parent='#accordionCategory' + *{category.id}">
-                <div class="accordion-body p-1">
-                    <div th:replace="::accordion-menu (categorySet=${category.categories})"></div>
-                </div>
+<div th:fragment="accordion-menu (categorySet)"
+     th:if="${categorySet != null && !categorySet.isEmpty()}"
+     th:each="category : ${categorySet}" th:id="'accordionCategory' + *{category.id}"
+     th:class="${category.categories != null && !category.categories.isEmpty() ? 'accordion' : 'p-1 border-bottom'}">
+    <!--/*@thymesVar id="categories" type="java.util.Set<by.it.academy.grodno.elibrary.api.dto.books.CategoryDto>"*/-->
+    <div th:if="${category.categories != null && !category.categories.isEmpty()}"
+         class="accordion-item">
+        <h2 class="accordion-header" th:id="'heading' + *{category.id}">
+            <button class="p-1 accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    th:attr="data-bs-target='#collapse' + *{category.id}, aria-controls='collapse' + *{category.id}"
+                    aria-expanded="false"
+                    th:text="${category.categoryName}">
+            </button>
+        </h2>
+        <div th:id="'collapse' + *{category.id}"
+             class="accordion-collapse collapse"
+             th:attr="aria-labelledby='heading' + *{category.id}, data-bs-parent='#accordionCategory' + *{category.id}">
+            <div class="accordion-body p-1">
+                <div th:replace="::accordion-menu (categorySet=${category.categories})"></div>
+                <a class="p-1" th:href="@{books(categoryId=${category.id})}">All</a>
             </div>
         </div>
-        <a th:if="${category.categories == null || category.categories.isEmpty()}"
-           th:href="@{books(categoryId=${category.id})}"
-           th:text="${category.categoryName}"
-           class="m-0 p-0"></a>
     </div>
+    <a th:if="${category.categories == null || category.categories.isEmpty()}"
+       th:href="@{books(categoryId=${category.id})}"
+       th:text="${category.categoryName}"
+       class="m-0 p-0"></a>
 </div>
 
 </body>
