--- a/elibrary-controller/src/main/resources/templates/fragments/upperNavbar.html
+++ b/elibrary-controller/src/main/resources/templates/fragments/upperNavbar.html
@@ -32,6 +32,7 @@
             <div class="d-flex">
                 <div>
                     <div th:if="${currentUser != null}">
+                        <p class="text-danger" th:if="${!currentUser.roles.contains('ROLE_USER')}">You need filling your profile</p>
                         <a class="btn btn btn-outline-secondary" th:href="@{'/subscriptions'}">My subscriptions</a>
                         <a class="btn btn btn-outline-primary" th:href="@{'/users/info'}" th:text="*{username}"></a>
                         <a class="btn btn-outline-danger" href="/logout">Log out</a>
